@@ -1,0 +1,4 @@
+function save()
+{
+	localStorage.setItem("text", document.getElementById("desc").value); //Permet de stocker le contenu de la description
+}
